--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /**
  * Colors
  */
@@ -10,35 +11,42 @@
 /**
  * The Basics
  */
-body {
-  margin: 0;
-  padding: 0; }
-
 html {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-  font-size: 18px;
+  font-size: 1.25rem;
   line-height: 1.5;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  quotes: "“" "”"; }
   @media (min-width: 50rem) {
     html {
-      font-size: 20px; } }
+      font-size: 1.25rem; } }
 
 *, *:before, *:after {
   box-sizing: inherit; }
 
 body {
+  margin: 0;
+  padding: 0;
   color: #515151;
   background-color: #fff;
   -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%; }
+  -ms-text-size-adjust: 100%;
+  /* Better Font Rendering =========== */
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-synthesis: none;
+  -moz-font-feature-settings: 'liga', 'kern'; }
 
 a {
-  color: #225378;
+  color: #FF0000;
   text-decoration: none;
-  transition: all 0.2s ease-in-out; }
+  transition: all 0.3s ease-in-out; }
   a:hover, a:focus {
+    outline-width: 0;
     text-decoration: none;
-    border-bottom: 1px dotted #515151; }
+    border-bottom: 1px dotted;
+    border-bottom-color: inherit; }
   a strong {
     color: inherit; }
 
@@ -51,6 +59,14 @@ img {
 /**
  * Tables
  */
+table {
+  width: 100%;
+  border-collapse: collapse; }
+
+td,
+th {
+  padding: .25rem .5rem; }
+
 /**
  * Icomoon Fonts
  */
@@ -70,9 +86,7 @@ img {
   font-variant: normal;
   text-transform: none;
   line-height: 1;
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; }
+  /* Better Font Rendering =========== */ }
 
 .icon-home:before {
   content: "\f015"; }
@@ -109,25 +123,23 @@ img {
  */
 h1, h2, h3, h4, h5, h6 {
   margin-bottom: .5rem;
-  font-weight: 500;
-  line-height: 1.25;
-  color: #313131;
-  text-rendering: optimizeLegibility; }
+  font-weight: 300;
+  letter-spacing: -.016em;
+  line-height: 1.25; }
 
 h1 {
-  font-size: 2rem;
-  font-weight: 300; }
+  font-size: 2rem; }
 
 h2 {
-  margin-top: 1rem;
-  font-size: 1.5rem; }
+  font-size: 1.75rem; }
 
 h3 {
-  margin-top: 1.5rem;
+  font-size: 1.5rem; }
+
+h4 {
   font-size: 1.25rem; }
 
-h4, h5, h6 {
-  margin-top: 1rem;
+h5, h6 {
   font-size: 1rem; }
 
 p {
@@ -140,6 +152,9 @@ strong {
 ul, ol, dl {
   margin-top: 0;
   margin-bottom: 1rem; }
+
+li {
+  line-height: 1.2rem; }
 
 dt {
   font-weight: bold; }
@@ -245,11 +260,14 @@ code {
   .page li + li,
   .post li + li {
     margin-top: .25rem; }
+  .page p > a,
+  .post p > a {
+    font-weight: 400; }
 
 .page-title,
 .post-title,
 .post-title a {
-  color: #303030; }
+  color: #515151; }
 
 .page-title,
 .post-title {
@@ -283,7 +301,7 @@ code {
 
 .pagination > li {
   display: inline;
-  font-size: 1.5rem; }
+  font-size: 1.25rem; }
 
 .pagination > li:first-child > a {
   position: relative;
@@ -370,7 +388,7 @@ code {
 
 /* About section */
 .sidebar-about h1 {
-  color: #fff;
+  color: #FF0000;
   margin-top: 0;
   font-size: 2.5rem;
   font-weight: 200; }
@@ -452,7 +470,7 @@ article > h2 {
   left: .5rem;
   top: .7rem;
   font-size: .8rem;
-  color: #ccc;
+  color: #767676;
   display: inline-block;
   text-transform: uppercase; }
 
