--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /**
  * Colors
  */
@@ -15,8 +14,7 @@ html {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
   font-size: 1.25rem;
   line-height: 1.5;
-  box-sizing: border-box;
-  quotes: "“" "”"; }
+  box-sizing: border-box; }
   @media (min-width: 50rem) {
     html {
       font-size: 1.25rem; } }
@@ -152,9 +150,6 @@ strong {
 ul, ol, dl {
   margin-top: 0;
   margin-bottom: 1rem; }
-
-li {
-  line-height: 1.2rem; }
 
 dt {
   font-weight: bold; }
