--- a/scss/type.scss
+++ b/scss/type.scss
@@ -30,9 +30,9 @@ ul, ol, dl {
   margin-bottom: 1rem;
 }
 
-li {
-  line-height: 1.2rem;
-}
+// li {
+//   line-height: 1.2rem;
+// }
 
 dt {
   font-weight: bold;
