--- a/scss/archives.scss
+++ b/scss/archives.scss
@@ -14,7 +14,7 @@
 }
 
 .blog-archives > h1 {
-  color: $gray-2;
+  color: $gray-light;
   display:inline-block;
   position:relative;
 }
@@ -32,7 +32,7 @@ article > h2 {
   left: .5rem;
   top: .7rem;
   font-size: .8rem;
-  color: $gray-3;
+  color: $gray-light;
   display: inline-block;
   text-transform: uppercase;
 }
