--- a/scss/posts.scss
+++ b/scss/posts.scss
@@ -33,14 +33,14 @@
   display: block;
   margin-top: -.5rem;
   margin-bottom: 1rem;
-  color: #9a9a9a;
+  color: $post-meta;
   font-size: .8rem;
   font-weight: 300;
 }
 .post-date > a {
   margin-top: -.5rem;
   margin-bottom: 1rem;
-  color: #9a9a9a;
+  color: $post-meta;
   font-size: .8rem;
   font-weight: 300;
 }
