--- a/scss/type.scss
+++ b/scss/type.scss
@@ -58,8 +58,8 @@ blockquote {
   padding: .5rem 1rem;
   margin: .8rem 0;
   color: #7a7a7a;
-  border-left: .25rem solid $gray-4;
-  background-color: $gray-1;
+  border-left: .25rem solid $gray;
+  background-color: $gray-lightest;
 
   p:last-child {
     margin-bottom: 0;
