--- a/scss/type.scss
+++ b/scss/type.scss
@@ -55,23 +55,29 @@ abbr {
 }
 
 blockquote {
-  padding: .5rem 1rem;
-  margin: .8rem 0;
-  color: #7a7a7a;
-  border-left: .25rem solid $gray;
+  padding: 1.5rem 1.5rem 1.5rem 1.5rem;
+  margin: 0 0 1rem 0;  /* TRBL */
+  color: #000;
   background-color: $gray-lightest;
+  font-style: italic;
+  font-size: 110%;
 
   p:last-child {
     margin-bottom: 0;
   }
 
-  em {
-    font-size: 90%;
+  cite {
+    // display: inline;
+    font-size: 80%;
+    font-style: normal;
+    padding-left: 2rem;
+    // float: right;
+    // margin-bottom: 0;
   }
 
   @media (min-width: 30em) {
-    padding-right: 5rem;
-    padding-left: 1.25rem;
+    // padding-right: 5rem;
+    // padding-left: 1.25rem;
   }
 }
 
@@ -95,15 +101,13 @@ a[href^="#fnref:"] {
 }
 
 // Custom type
-// Extend paragraphs with `.lead` for larger introductory text.
-
-.lead {
-  font-size: 1rem;
-  letter-spacing: 1px;
-  font-weight: 100;
-}
-
 .small {
   font-size: .7rem;
   font-weight: 100;
+}
+
+.sources > a {
+  font-size: 85%;
+  margin: 0 1rem;
+  color: $gray-light;
 }
