--- a/scss/type.scss
+++ b/scss/type.scss
@@ -55,29 +55,28 @@ abbr {
 }
 
 blockquote {
-  padding: 1.5rem 1.5rem 1.5rem 1.5rem;
+  padding: 1.5rem;
   margin: 0 0 1rem 0;  /* TRBL */
-  color: #000;
+  color: $black;
   background-color: $gray-lightest;
   font-style: italic;
-  font-size: 110%;
+  border-right: .25rem solid $gray;
+  // font-size: 110%;
 
   p:last-child {
     margin-bottom: 0;
   }
 
   cite {
-    // display: inline;
     font-size: 80%;
     font-style: normal;
     padding-left: 2rem;
     // float: right;
-    // margin-bottom: 0;
   }
 
   @media (min-width: 30em) {
-    // padding-right: 5rem;
-    // padding-left: 1.25rem;
+    padding-right: 5rem;
+    padding-left: 1.25rem;
   }
 }
 
