--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -25,7 +25,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  color: #515151;
+  color: #373a3c;
   background-color: #fff;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
@@ -167,19 +167,23 @@ abbr {
     border-bottom: 1px dotted #e5e5e5; }
 
 blockquote {
-  padding: 1.5rem 1.5rem 1.5rem 1.5rem;
+  padding: 1.5rem;
   margin: 0 0 1rem 0;
   /* TRBL */
   color: #000;
   background-color: #f7f7f9;
   font-style: italic;
-  font-size: 110%; }
+  border-right: 0.25rem solid #55595c; }
   blockquote p:last-child {
     margin-bottom: 0; }
   blockquote cite {
     font-size: 80%;
     font-style: normal;
     padding-left: 2rem; }
+  @media (min-width: 30em) {
+    blockquote {
+      padding-right: 5rem;
+      padding-left: 1.25rem; } }
 
 a[href^="#fn:"],
 a[href^="#fnref:"] {
@@ -262,7 +266,7 @@ code {
 .page-title,
 .post-title,
 .post-title a {
-  color: #515151; }
+  color: #373a3c; }
 
 .page-title,
 .post-title {
