--- a/scss/base.scss
+++ b/scss/base.scss
@@ -7,7 +7,6 @@ html {
   font-size: $root-font-size;
   line-height: $root-line-height;
   box-sizing: border-box;
-  // quotes: "“" "”";
 
   @media (min-width: $bp-large) {
     font-size: $large-font-size;
@@ -24,15 +23,14 @@ body {
   padding: 0;
   color: $body-color;
   background-color: $body-bg;
-  -webkit-text-size-adjust: 100%;
-      -ms-text-size-adjust: 100%;
 
   /* Better Font Rendering =========== */
+  -webkit-text-size-adjust: 100%;
+      -ms-text-size-adjust: 100%;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-synthesis: none;
-  -moz-font-feature-settings: 'liga', 'kern';
 }
 
 // No `:visited` state is required by default (browsers will use `a`)
@@ -50,9 +48,9 @@ a {
     border-bottom-color: inherit;
   }
 
-  strong {
-    color: inherit;
-  }
+  // strong {
+  //   color: inherit;
+  // }
 }
 
 img {
