--- a/scss/posts.scss
+++ b/scss/posts.scss
@@ -12,10 +12,21 @@
   li + li {
     margin-top: .25rem;
   }
-  p > a {
-    font-weight: 400;
-  }
 }
+
+.post > h1, h2, h3, h4, h5, h6 {
+  color: $black;
+}
+
+// .post-content > p > a,
+// .post-content > li > a {
+//   font-weight: 500;
+//   // outline-width: 0;
+//   color: #818181;
+//   text-decoration: none;
+//   border-bottom: 1px dotted;  // from the link style on http://www.briangardner.com/
+//   border-bottom-color: inherit;
+// }
 
 // Blog post or page title
 .page-title,
