--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -3,6 +3,7 @@
  */
 
 $black:              #000;
+$gray-darker:        #919191;
 $gray-dark:          #373a3c;
 $gray:               #55595c;
 $gray-light:         #818a91;
@@ -21,8 +22,8 @@ $white:              #fff;
 
 // Main
 $body-bg:       $white;
-$link-color:    #FF0000;
-$body-color:    $gray-dark;
+$link-color:    #42B6F3;
+$body-color:    #818181;
 $border-color:  #e5e5e5;
 
 // Code
@@ -30,7 +31,7 @@ $code-color: #d14;
 $code-background-color: #f8f8f8;
 
 // Posts
-$post-title: $gray-dark;
+$post-title: $black;
 $post-meta: $gray-light;
 
 /**
@@ -41,7 +42,7 @@ $post-meta: $gray-light;
 $root-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !default;
 $code-font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
 
-$root-font-size: 1.25rem !default; //18px;
+$root-font-size: 1rem !default; //18px;
 $root-line-height: 1.5;
 $large-font-size: 1.25rem !default; //20px;
 
