--- a/scss/icons.scss
+++ b/scss/icons.scss
@@ -22,6 +22,7 @@
   font-variant: normal;
   text-transform: none;
   line-height: 1;
+  vertical-align: -5%;  // DJS added
 
   /* Better Font Rendering =========== */
   // -webkit-font-smoothing: antialiased;
