--- a/scss/button.scss
+++ b/scss/button.scss
@@ -25,6 +25,8 @@
 
 .button:hover {
   border:1px solid $gray-light;
+  // background-color: $gray-dark;
+  // color: $white;
 }
 
 .button-disabled {
