--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -62,6 +62,11 @@ table {
 td,
 th {
   padding: .25rem .5rem; }
+  td img,
+  th img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto; }
 
 /**
  * Icomoon Fonts
@@ -120,8 +125,8 @@ th {
  */
 h1, h2, h3, h4, h5, h6 {
   margin-bottom: .5rem;
+  margin-top: .5rem;
   font-weight: 300;
-  letter-spacing: -.016em;
   line-height: 1.25; }
 
 h1 {
@@ -261,6 +266,13 @@ code {
 
 .post > h1, h2, h3, h4, h5, h6 {
   color: #000; }
+
+.post-content > p > a,
+.post-content > li > a {
+  font-weight: 500;
+  text-decoration: none;
+  border-bottom: 1px dotted;
+  border-bottom-color: inherit; }
 
 .page-title,
 .post-title,
