--- a/scss/base.scss
+++ b/scss/base.scss
@@ -76,6 +76,11 @@ td,
 th {
   padding: .25rem .5rem;
   // border: 1px solid $border-color;
+  img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 // th {
