--- a/scss/type.scss
+++ b/scss/type.scss
@@ -4,8 +4,9 @@
 
 h1, h2, h3, h4, h5, h6 {
   margin-bottom: .5rem;
+  margin-top: .5rem;
   font-weight: 300;
-  letter-spacing: -.016em;
+  // letter-spacing: -.016em;
   line-height: 1.25;
 }
 
