--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -31,7 +31,7 @@ $code-color: #d14;
 $code-background-color: #f8f8f8;
 
 // Posts
-$post-title: $black;
+$post-title: #595959;   //$black;
 $post-meta: $gray;
 
 /**
