--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -453,7 +453,7 @@ code {
   margin-top: 1.5rem;
   border: 0;
   height: 1px;
-  background-image: linear-gradient(to right, transparent, rgba(0, 0, 0, 0.75), transparent); }
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0)); }
 
 .hr-sidebar {
   border: 0;
